--- a/.github/workflows/firestore-cleanup.yml
+++ b/.github/workflows/firestore-cleanup.yml
@@ -18,7 +18,8 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
 
       - name: Run Firestore cleanup
         env:
