--- a/.github/workflows/firestore-cleanup.yml
+++ b/.github/workflows/firestore-cleanup.yml
@@ -2,7 +2,7 @@ name: Firestore Cameras Cleanup
 
 on:
   schedule:
-    - cron: '0 * * * *' # every hour
+    - cron: '0 */2 * * *' # every hour
   workflow_dispatch:
 
 jobs:
